feat: storedGame scaffold
