# checkers/x/checkers/types/genesis.pb.go
@@ -28,8 +28,9 @@ const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 // GenesisState defines the checkers module's genesis state.
 type GenesisState struct {
 	// params defines all the parameters of the module.
-	Params     Params      `protobuf:"bytes,1,opt,name=params,proto3" json:"params"`
-	SystemInfo *SystemInfo `protobuf:"bytes,2,opt,name=systemInfo,proto3" json:"systemInfo,omitempty"`
+	Params         Params       `protobuf:"bytes,1,opt,name=params,proto3" json:"params"`
+	SystemInfo     *SystemInfo  `protobuf:"bytes,2,opt,name=systemInfo,proto3" json:"systemInfo,omitempty"`
+	StoredGameList []StoredGame `protobuf:"bytes,3,rep,name=storedGameList,proto3" json:"storedGameList"`
 }
 
 func (m *GenesisState) Reset()         { *m = GenesisState{} }
@@ -79,6 +80,13 @@ func (m *GenesisState) GetSystemInfo() *SystemInfo {
 	return nil
 }
 
+func (m *GenesisState) GetStoredGameList() []StoredGame {
+	if m != nil {
+		return m.StoredGameList
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*GenesisState)(nil), "checkers.checkers.GenesisState")
 }
@@ -86,23 +94,25 @@ func init() {
 func init() { proto.RegisterFile("checkers/checkers/genesis.proto", fileDescriptor_e29994b75a5b5b77) }
 
 var fileDescriptor_e29994b75a5b5b77 = []byte{
-	// 245 bytes of a gzipped FileDescriptorProto
+	// 288 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x92, 0x4f, 0xce, 0x48, 0x4d,
 	0xce, 0x4e, 0x2d, 0x2a, 0xd6, 0x87, 0x33, 0xd2, 0x53, 0xf3, 0x52, 0x8b, 0x33, 0x8b, 0xf5, 0x0a,
 	0x8a, 0xf2, 0x4b, 0xf2, 0x85, 0x04, 0x61, 0xe2, 0x7a, 0x30, 0x86, 0x94, 0x60, 0x62, 0x6e, 0x66,
 	0x5e, 0xbe, 0x3e, 0x98, 0x84, 0xa8, 0x92, 0x12, 0x49, 0xcf, 0x4f, 0xcf, 0x07, 0x33, 0xf5, 0x41,
 	0x2c, 0xa8, 0xa8, 0x1c, 0xa6, 0xe1, 0x05, 0x89, 0x45, 0x89, 0xb9, 0x50, 0xb3, 0xa5, 0x94, 0x31,
-	0xe5, 0x8b, 0x2b, 0x8b, 0x4b, 0x52, 0x73, 0xe3, 0x33, 0xf3, 0xd2, 0xa0, 0x86, 0x28, 0x75, 0x33,
-	0x72, 0xf1, 0xb8, 0x43, 0x9c, 0x14, 0x5c, 0x92, 0x58, 0x92, 0x2a, 0x64, 0xc3, 0xc5, 0x06, 0x31,
-	0x45, 0x82, 0x51, 0x81, 0x51, 0x83, 0xdb, 0x48, 0x52, 0x0f, 0xc3, 0x89, 0x7a, 0x01, 0x60, 0x05,
-	0x4e, 0x9c, 0x27, 0xee, 0xc9, 0x33, 0xac, 0x78, 0xbe, 0x41, 0x8b, 0x31, 0x08, 0xaa, 0x47, 0xc8,
-	0x96, 0x8b, 0x0b, 0x62, 0x87, 0x67, 0x5e, 0x5a, 0xbe, 0x04, 0x13, 0xd8, 0x04, 0x59, 0x2c, 0x26,
-	0x04, 0xc3, 0x15, 0x05, 0x21, 0x69, 0x70, 0xf2, 0x38, 0xf1, 0x48, 0x8e, 0xf1, 0xc2, 0x23, 0x39,
-	0xc6, 0x07, 0x8f, 0xe4, 0x18, 0x27, 0x3c, 0x96, 0x63, 0xb8, 0xf0, 0x58, 0x8e, 0xe1, 0xc6, 0x63,
-	0x39, 0x86, 0x28, 0xbd, 0xf4, 0xcc, 0x92, 0x8c, 0xd2, 0x24, 0xbd, 0xe4, 0xfc, 0x5c, 0xfd, 0xe2,
-	0xd2, 0x8c, 0xd4, 0x1c, 0xdd, 0xec, 0xc4, 0x02, 0x84, 0xc7, 0x2a, 0x10, 0xcc, 0x92, 0xca, 0x82,
-	0xd4, 0xe2, 0x24, 0x36, 0xb0, 0xf7, 0x8c, 0x01, 0x01, 0x00, 0x00, 0xff, 0xff, 0x04, 0x20, 0x3a,
-	0xf4, 0x82, 0x01, 0x00, 0x00,
+	0xe5, 0x8b, 0x2b, 0x8b, 0x4b, 0x52, 0x73, 0xe3, 0x33, 0xf3, 0xd2, 0xf2, 0xf1, 0x28, 0x2a, 0xc9,
+	0x2f, 0x4a, 0x4d, 0x89, 0x4f, 0x4f, 0xcc, 0x4d, 0x85, 0x28, 0x52, 0xba, 0xc1, 0xc8, 0xc5, 0xe3,
+	0x0e, 0x71, 0x77, 0x70, 0x49, 0x62, 0x49, 0xaa, 0x90, 0x0d, 0x17, 0x1b, 0xc4, 0x2a, 0x09, 0x46,
+	0x05, 0x46, 0x0d, 0x6e, 0x23, 0x49, 0x3d, 0x0c, 0x7f, 0xe8, 0x05, 0x80, 0x15, 0x38, 0x71, 0x9e,
+	0xb8, 0x27, 0xcf, 0xb0, 0xe2, 0xf9, 0x06, 0x2d, 0xc6, 0x20, 0xa8, 0x1e, 0x21, 0x5b, 0x2e, 0x2e,
+	0x88, 0x43, 0x3c, 0xf3, 0xd2, 0xf2, 0x25, 0x98, 0xc0, 0x26, 0xc8, 0x62, 0x31, 0x21, 0x18, 0xae,
+	0x28, 0x08, 0x49, 0x83, 0x90, 0x37, 0x17, 0x1f, 0xc4, 0x89, 0xee, 0x89, 0xb9, 0xa9, 0x3e, 0x99,
+	0xc5, 0x25, 0x12, 0xcc, 0x0a, 0xcc, 0xb8, 0x8c, 0x80, 0x2b, 0x74, 0x62, 0x01, 0x39, 0x24, 0x08,
+	0x4d, 0xab, 0x93, 0xc7, 0x89, 0x47, 0x72, 0x8c, 0x17, 0x1e, 0xc9, 0x31, 0x3e, 0x78, 0x24, 0xc7,
+	0x38, 0xe1, 0xb1, 0x1c, 0xc3, 0x85, 0xc7, 0x72, 0x0c, 0x37, 0x1e, 0xcb, 0x31, 0x44, 0xe9, 0xa5,
+	0x67, 0x96, 0x64, 0x94, 0x26, 0xe9, 0x25, 0xe7, 0xe7, 0xea, 0x17, 0x97, 0x66, 0xa4, 0xe6, 0xe8,
+	0x66, 0x27, 0x16, 0x20, 0x42, 0xa9, 0x02, 0xc1, 0x2c, 0xa9, 0x2c, 0x48, 0x2d, 0x4e, 0x62, 0x03,
+	0x87, 0x95, 0x31, 0x20, 0x00, 0x00, 0xff, 0xff, 0xdf, 0xc9, 0x79, 0x9f, 0xf4, 0x01, 0x00, 0x00,
 }
 
 func (m *GenesisState) Marshal() (dAtA []byte, err error) {
@@ -125,6 +135,20 @@ func (m *GenesisState) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if len(m.StoredGameList) > 0 {
+		for iNdEx := len(m.StoredGameList) - 1; iNdEx >= 0; iNdEx-- {
+			{
+				size, err := m.StoredGameList[iNdEx].MarshalToSizedBuffer(dAtA[:i])
+				if err != nil {
+					return 0, err
+				}
+				i -= size
+				i = encodeVarintGenesis(dAtA, i, uint64(size))
+			}
+			i--
+			dAtA[i] = 0x1a
+		}
+	}
 	if m.SystemInfo != nil {
 		{
 			size, err := m.SystemInfo.MarshalToSizedBuffer(dAtA[:i])
@@ -172,6 +196,12 @@ func (m *GenesisState) Size() (n int) {
 	if m.SystemInfo != nil {
 		l = m.SystemInfo.Size()
 		n += 1 + l + sovGenesis(uint64(l))
+	}
+	if len(m.StoredGameList) > 0 {
+		for _, e := range m.StoredGameList {
+			l = e.Size()
+			n += 1 + l + sovGenesis(uint64(l))
+		}
 	}
 	return n
 }
@@ -277,6 +307,40 @@ func (m *GenesisState) Unmarshal(dAtA []byte) error {
 				m.SystemInfo = &SystemInfo{}
 			}
 			if err := m.SystemInfo.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
+		case 3:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field StoredGameList", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowGenesis
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			postIndex := iNdEx + msglen
+			if postIndex < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.StoredGameList = append(m.StoredGameList, StoredGame{})
+			if err := m.StoredGameList[len(m.StoredGameList)-1].Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
 			iNdEx = postIndex
